welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: Boolean does not take parameters
  }else(detrompeur==0){
                      ^